--- a/package.json
+++ b/package.json
@@ -12,15 +12,43 @@
     "ie 11"
   ],
   "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "export": "next export",
     "start": "serve .",
-    "transpile": "babel js/interactions-appel.js --presets @babel/preset-env -o dist/js/interactions-appel.js"
+    "lint": "xo"
   },
   "dependencies": {
+    "next": "^9.3.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "serve": "^11.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4"
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "eslint-config-xo-nextjs": "^1.6.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "xo": "^0.28.2"
+  },
+  "xo": {
+    "extends": "xo-nextjs",
+    "semicolon": false,
+    "space": 2,
+    "env": [
+      "browser"
+    ],
+    "rules": {
+      "unicorn/catch-error-name": "off",
+      "react/jsx-sort-props": "off",
+      "react/jsx-child-element-spacing": "off",
+      "react/boolean-prop-naming": "off",
+      "react/static-property-placement": "off",
+      "react/state-in-constructor": "off"
+    }
   }
 }
