--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "xo"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
