--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "build:codes-postaux": "node build-codes-postaux",
     "export": "next export",
     "start": "serve out",
     "lint": "xo"
@@ -29,11 +30,13 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "@etalab/decoupage-administratif": "^0.8.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-inline-import": "^3.0.0",
     "eslint-config-xo-nextjs": "^1.6.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "lodash": "^4.17.15",
     "xo": "^0.28.2"
   },
   "xo": {
