--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "serve": "^11.3.0"
   },
   "devDependencies": {
