--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "test": "jest",
     "build:codes-postaux": "node build-codes-postaux",
     "export": "next export",
     "start": "serve out",
@@ -38,6 +39,7 @@
     "eslint-config-xo-nextjs": "^1.6.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "jest": "^25.3.0",
     "lodash": "^4.17.15",
     "xo": "^0.28.2"
   },
@@ -46,6 +48,7 @@
     "semicolon": false,
     "space": 2,
     "env": [
+      "jest",
       "browser"
     ],
     "rules": {
